# bookit

./: .gitignore  Dockerfile  README.org  package-lock.json  package.json  pyproject.toml  pytest.ini  webpack.config.js
bookit/: db.sqlite3  manage.py
bookit/assets/js/: calendar.js  index.js
bookit/assets/styles/: app.scss
bookit/bookit/: asgi.py  settings.py  urls.py  wsgi.py
bookit/bookit/core/: views.py
bookit/core/: admin.py  app.py  forms.py  models.py  serializers.py  views.py
bookit/core/migrations/: 0001_initial.py
bookit/templates/: base.html  create_booking.html  dashboard.html
bookit/templates/registration/: login.html  signup.html
bookit/tests/: test_models.py
