[tool.poetry]
name = "bookit"
version = "0.1.0"
description = "A space booking management system written in Django"
authors = ["Dylan Wilson <dylanjw@protonmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
Django = "=3.0"
pip = "^19.3.1"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
